# vig8

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROGRESS.md  README.md
config/: vig8.toml  vig8_rexglue.toml  vig8_switch_tables.toml
docs/: binary-analysis.md  menu_system_plan.md  xenonrecomp-workflow.md
ppc/: ppc_config.h
project/: CMakeLists.txt  CMakePresets.json
project/src/: keyboard_driver.cpp  keyboard_driver.h  main.cpp  menu.cpp  menu.h  net.cpp  net.h  settings.cpp  settings.h  stubs.cpp  test_boot.cpp
src/: kernel_stubs.cpp  main.cpp  math_polyfill.cpp  memory.cpp  memory.h  xex_loader.cpp  xex_loader.h
tools/: dump_pe.cpp  extract_pe.cpp  extract_pe.py  extract_stfs.py  find_abi_addrs.py  find_missing_vtable_funcs.py
tools/patches/: xenonrecomp-altivec-vmx.patch
